# sirv-integration-pipeline

./: .gitignore  =1.0.0  BUGFIX.md  BUGFIX_RF_COVERAGE.md  CHANGELOG.md  README.md  evaluate_rf_coverage.py  pipeline_schematic.md  pipeline_schematic.txt  pyproject.toml  readme.md  resume_pipeline.sh  resume_test.sh  rf_coverage_eval.slurm  run_bamslam_analysis.py  run_comparative_bamslam.py  run_complete_test.py  run_sirv_pipeline.py  run_test_pipeline.py  setup.py  sirv_integration_pipeline.slurm  sirv_model_comparison.slurm  sirv_pipeline.py  test_extraction.py  xgb_coverage_eval.slurm
.github/workflows/: python-tests.yml
docs/: random_forest_coverage_model.md
examples/: SIRV_mapping.slurm  benchmark_flames.py  run_sirv_bam_mapping.py  run_sirv_mapping.py  simple_integration.py
sirv_env/: pyvenv.cfg
sirv_integration_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sirv_pipeline/: __init__.py  __main__.py  coverage_bias.py  diagnostics.py  evaluation.py  feature_cache.py  init.py  integration.py  main.py  mapping.py  ml_coverage_model.py  model_config.py  r_integration.py  utils.py
sirv_pipeline/plotting/: __init__.py  bamslam_plots.py  coverage_plots.py  transcript_plots.py
sirv_pipeline/utils/: bamslam_plots.py  bamslam_utils.py  config.py  feature_cache.py
slurm/: sirv_pipeline.sh
test_run/: extract_real_sirvs.sh  run_pipeline.py  run_with_real_data.sh  synthetic_sirv_fastq.py
tests/: init.py  test_coverage_bias.py  test_evaluation.py  test_integration.py  test_mapping.py  test_utils.py
